--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ DB_HOST=db
 DB_NAME=isla_transfers
 DB_USER=user
 DB_PASS=pass
+DB_ROOT_PASS=root
 
 # URL de la Aplicación
 APP_URL=http://localhost:8080
