Añadir Composer al Dockerfile y configurar autoload de App\Core

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
             "App\\Controllers\\": "app/controllers/",
             "App\\Controllers\\Api\\": "app/controllers/api/",
             "App\\Models\\": "app/models/",
-            "App\\Helpers\\": "app/helpers/"
+            "App\\Helpers\\": "app/helpers/",
+            "App\\Core\\": "app/core/"
         }
     },
     "config": {
